finish the rest of the homework

--- a/Ma_Wenjing_HW1.ipynb
+++ b/Ma_Wenjing_HW1.ipynb
@@ -11,10 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Add your name and the date your notebook was last updated\n",
-    "\n",
-    "Wenjing Ma\n",
-    "1-28-2020"
+    "#### Add your name and the date your notebook was last updated"
    ]
   },
   {
@@ -26,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wenjing Ma 2020-01-28\n"
+      "Wenjing Ma 2020-02-02\n"
      ]
     }
    ],
@@ -44,11 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import watermark"
+    "import watermark\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import sinfo"
    ]
   },
   {
@@ -61,10 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"countdata.csv\", sep='\\t', header=0, index_col=0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,16 +77,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of             id    T02    T04    T06    T08   T10   T12    T14    T01    T03  \\\n",
+       "0         Aaas   4341   4052   3762   3473  2894  3193   3706   2574   2760   \n",
+       "1         Aacs  11693  10913  10134   9354  7795  6784   8448   6011   4736   \n",
+       "2        Aadac      0      0      0      0     0     0      0      0      0   \n",
+       "3      Aadacl2      0      0      0      0     0     0      0      0      0   \n",
+       "4      Aadacl3      0      0      0      0     0     0      0      0      0   \n",
+       "...        ...    ...    ...    ...    ...   ...   ...    ...    ...    ...   \n",
+       "14939   Zyg11a      8      7      7      6     5     5      3     15     12   \n",
+       "14940   Zyg11b   4133   3857   3582   3306  2755  2381   2311   2509   2660   \n",
+       "14941      Zyx  12810  11956  11102  10248  8540  9206  10722  16827  18652   \n",
+       "14942    Zzef1   4269   3984   3700   3415  2846  2598   2164   2014   2224   \n",
+       "14943     Zzz3   8717   8135   7554   6973  5811  5332   6638   5829   6680   \n",
+       "\n",
+       "         T05    T07    T09    T11    T13  \n",
+       "0       2512   3014   3266   3517   3768  \n",
+       "1       5480   6576   7124   7672   8220  \n",
+       "2          2      2      3      3      3  \n",
+       "3          0      0      0      0      0  \n",
+       "4          0      0      0      0      0  \n",
+       "...      ...    ...    ...    ...    ...  \n",
+       "14939      9     11     12     13     14  \n",
+       "14940   2555   3066   3322   3577   3833  \n",
+       "14941  20013  24016  26017  28018  30020  \n",
+       "14942   2310   2772   3003   3234   3465  \n",
+       "14943   6235   7482   8106   8729   9353  \n",
+       "\n",
+       "[14944 rows x 15 columns]>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Report Session Information\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----\n",
+      "numpy       1.18.1\n",
+      "pandas      0.25.3\n",
+      "sinfo       0.3.1\n",
+      "watermark   2.0.2\n",
+      "-----\n",
+      "IPython             7.11.1\n",
+      "jupyter_client      5.3.4\n",
+      "jupyter_core        4.6.1\n",
+      "notebook            6.0.3\n",
+      "-----\n",
+      "Python 3.8.1 (default, Jan  8 2020, 16:15:59) [Clang 4.0.1 (tags/RELEASE_401/final)]\n",
+      "macOS-10.15.2-x86_64-i386-64bit\n",
+      "4 logical CPU cores, i386\n",
+      "-----\n",
+      "Session information updated at 2020-02-02 13:39\n"
+     ]
+    }
+   ],
+   "source": [
+    "sinfo.sinfo()"
    ]
   },
   {
