--- a/Ma_Wenjing_HW1.ipynb
+++ b/Ma_Wenjing_HW1.ipynb
@@ -77,48 +77,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>T02</th>\n",
+       "      <th>T04</th>\n",
+       "      <th>T06</th>\n",
+       "      <th>T08</th>\n",
+       "      <th>T10</th>\n",
+       "      <th>T12</th>\n",
+       "      <th>T14</th>\n",
+       "      <th>T01</th>\n",
+       "      <th>T03</th>\n",
+       "      <th>T05</th>\n",
+       "      <th>T07</th>\n",
+       "      <th>T09</th>\n",
+       "      <th>T11</th>\n",
+       "      <th>T13</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Aaas</th>\n",
+       "      <td>4341</td>\n",
+       "      <td>4052</td>\n",
+       "      <td>3762</td>\n",
+       "      <td>3473</td>\n",
+       "      <td>2894</td>\n",
+       "      <td>3193</td>\n",
+       "      <td>3706</td>\n",
+       "      <td>2574</td>\n",
+       "      <td>2760</td>\n",
+       "      <td>2512</td>\n",
+       "      <td>3014</td>\n",
+       "      <td>3266</td>\n",
+       "      <td>3517</td>\n",
+       "      <td>3768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aacs</th>\n",
+       "      <td>11693</td>\n",
+       "      <td>10913</td>\n",
+       "      <td>10134</td>\n",
+       "      <td>9354</td>\n",
+       "      <td>7795</td>\n",
+       "      <td>6784</td>\n",
+       "      <td>8448</td>\n",
+       "      <td>6011</td>\n",
+       "      <td>4736</td>\n",
+       "      <td>5480</td>\n",
+       "      <td>6576</td>\n",
+       "      <td>7124</td>\n",
+       "      <td>7672</td>\n",
+       "      <td>8220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aadac</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aadacl2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aadacl3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aadat</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aaed1</th>\n",
+       "      <td>1173</td>\n",
+       "      <td>1095</td>\n",
+       "      <td>1017</td>\n",
+       "      <td>938</td>\n",
+       "      <td>782</td>\n",
+       "      <td>773</td>\n",
+       "      <td>1113</td>\n",
+       "      <td>1547</td>\n",
+       "      <td>1848</td>\n",
+       "      <td>1477</td>\n",
+       "      <td>1772</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>2068</td>\n",
+       "      <td>2216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aagab</th>\n",
+       "      <td>2618</td>\n",
+       "      <td>2443</td>\n",
+       "      <td>2269</td>\n",
+       "      <td>2094</td>\n",
+       "      <td>1745</td>\n",
+       "      <td>1791</td>\n",
+       "      <td>1734</td>\n",
+       "      <td>1329</td>\n",
+       "      <td>1272</td>\n",
+       "      <td>1245</td>\n",
+       "      <td>1494</td>\n",
+       "      <td>1619</td>\n",
+       "      <td>1743</td>\n",
+       "      <td>1868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aak1</th>\n",
+       "      <td>4239</td>\n",
+       "      <td>3956</td>\n",
+       "      <td>3674</td>\n",
+       "      <td>3391</td>\n",
+       "      <td>2826</td>\n",
+       "      <td>2884</td>\n",
+       "      <td>2345</td>\n",
+       "      <td>3508</td>\n",
+       "      <td>4299</td>\n",
+       "      <td>4060</td>\n",
+       "      <td>4872</td>\n",
+       "      <td>5278</td>\n",
+       "      <td>5684</td>\n",
+       "      <td>6090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aamdc</th>\n",
+       "      <td>165</td>\n",
+       "      <td>154</td>\n",
+       "      <td>143</td>\n",
+       "      <td>132</td>\n",
+       "      <td>110</td>\n",
+       "      <td>117</td>\n",
+       "      <td>155</td>\n",
+       "      <td>160</td>\n",
+       "      <td>176</td>\n",
+       "      <td>140</td>\n",
+       "      <td>168</td>\n",
+       "      <td>182</td>\n",
+       "      <td>196</td>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<bound method NDFrame.head of             id    T02    T04    T06    T08   T10   T12    T14    T01    T03  \\\n",
-       "0         Aaas   4341   4052   3762   3473  2894  3193   3706   2574   2760   \n",
-       "1         Aacs  11693  10913  10134   9354  7795  6784   8448   6011   4736   \n",
-       "2        Aadac      0      0      0      0     0     0      0      0      0   \n",
-       "3      Aadacl2      0      0      0      0     0     0      0      0      0   \n",
-       "4      Aadacl3      0      0      0      0     0     0      0      0      0   \n",
-       "...        ...    ...    ...    ...    ...   ...   ...    ...    ...    ...   \n",
-       "14939   Zyg11a      8      7      7      6     5     5      3     15     12   \n",
-       "14940   Zyg11b   4133   3857   3582   3306  2755  2381   2311   2509   2660   \n",
-       "14941      Zyx  12810  11956  11102  10248  8540  9206  10722  16827  18652   \n",
-       "14942    Zzef1   4269   3984   3700   3415  2846  2598   2164   2014   2224   \n",
-       "14943     Zzz3   8717   8135   7554   6973  5811  5332   6638   5829   6680   \n",
+       "           T02    T04    T06   T08   T10   T12   T14   T01   T03   T05   T07  \\\n",
+       "id                                                                             \n",
+       "Aaas      4341   4052   3762  3473  2894  3193  3706  2574  2760  2512  3014   \n",
+       "Aacs     11693  10913  10134  9354  7795  6784  8448  6011  4736  5480  6576   \n",
+       "Aadac        0      0      0     0     0     0     0     0     0     2     2   \n",
+       "Aadacl2      0      0      0     0     0     0     0     0     0     0     0   \n",
+       "Aadacl3      0      0      0     0     0     0     0     0     0     0     0   \n",
+       "Aadat        0      0      0     0     0     0     0     0     0     0     0   \n",
+       "Aaed1     1173   1095   1017   938   782   773  1113  1547  1848  1477  1772   \n",
+       "Aagab     2618   2443   2269  2094  1745  1791  1734  1329  1272  1245  1494   \n",
+       "Aak1      4239   3956   3674  3391  2826  2884  2345  3508  4299  4060  4872   \n",
+       "Aamdc      165    154    143   132   110   117   155   160   176   140   168   \n",
        "\n",
-       "         T05    T07    T09    T11    T13  \n",
-       "0       2512   3014   3266   3517   3768  \n",
-       "1       5480   6576   7124   7672   8220  \n",
-       "2          2      2      3      3      3  \n",
-       "3          0      0      0      0      0  \n",
-       "4          0      0      0      0      0  \n",
-       "...      ...    ...    ...    ...    ...  \n",
-       "14939      9     11     12     13     14  \n",
-       "14940   2555   3066   3322   3577   3833  \n",
-       "14941  20013  24016  26017  28018  30020  \n",
-       "14942   2310   2772   3003   3234   3465  \n",
-       "14943   6235   7482   8106   8729   9353  \n",
-       "\n",
-       "[14944 rows x 15 columns]>"
+       "          T09   T11   T13  \n",
+       "id                         \n",
+       "Aaas     3266  3517  3768  \n",
+       "Aacs     7124  7672  8220  \n",
+       "Aadac       3     3     3  \n",
+       "Aadacl2     0     0     0  \n",
+       "Aadacl3     0     0     0  \n",
+       "Aadat       0     0     0  \n",
+       "Aaed1    1920  2068  2216  \n",
+       "Aagab    1619  1743  1868  \n",
+       "Aak1     5278  5684  6090  \n",
+       "Aamdc     182   196   210  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head"
+    "df.head(n=10)"
    ]
   },
   {
@@ -130,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +377,7 @@
       "macOS-10.15.2-x86_64-i386-64bit\n",
       "4 logical CPU cores, i386\n",
       "-----\n",
-      "Session information updated at 2020-02-02 13:39\n"
+      "Session information updated at 2020-02-02 13:54\n"
      ]
     }
    ],
