--- a/Ma_Wenjing_HW1.ipynb
+++ b/Ma_Wenjing_HW1.ipynb
@@ -61,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"countdata.csv\", sep='\\t', header=0, index_col=0)"
+    "df = pd.read_csv(\"countdata.csv\", sep='\\t', header=0)"
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +101,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
        "      <th>T02</th>\n",
        "      <th>T04</th>\n",
        "      <th>T06</th>\n",
@@ -116,27 +117,11 @@
        "      <th>T11</th>\n",
        "      <th>T13</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Aaas</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Aaas</td>\n",
        "      <td>4341</td>\n",
        "      <td>4052</td>\n",
        "      <td>3762</td>\n",
@@ -153,7 +138,8 @@
        "      <td>3768</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aacs</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Aacs</td>\n",
        "      <td>11693</td>\n",
        "      <td>10913</td>\n",
        "      <td>10134</td>\n",
@@ -170,7 +156,8 @@
        "      <td>8220</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aadac</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Aadac</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -187,7 +174,8 @@
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aadacl2</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Aadacl2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -204,7 +192,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aadacl3</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Aadacl3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -221,7 +210,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aadat</th>\n",
+       "      <th>5</th>\n",
+       "      <td>Aadat</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -238,7 +228,8 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aaed1</th>\n",
+       "      <th>6</th>\n",
+       "      <td>Aaed1</td>\n",
        "      <td>1173</td>\n",
        "      <td>1095</td>\n",
        "      <td>1017</td>\n",
@@ -255,7 +246,8 @@
        "      <td>2216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aagab</th>\n",
+       "      <th>7</th>\n",
+       "      <td>Aagab</td>\n",
        "      <td>2618</td>\n",
        "      <td>2443</td>\n",
        "      <td>2269</td>\n",
@@ -272,7 +264,8 @@
        "      <td>1868</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aak1</th>\n",
+       "      <th>8</th>\n",
+       "      <td>Aak1</td>\n",
        "      <td>4239</td>\n",
        "      <td>3956</td>\n",
        "      <td>3674</td>\n",
@@ -289,7 +282,8 @@
        "      <td>6090</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aamdc</th>\n",
+       "      <th>9</th>\n",
+       "      <td>Aamdc</td>\n",
        "      <td>165</td>\n",
        "      <td>154</td>\n",
        "      <td>143</td>\n",
@@ -310,34 +304,32 @@
        "</div>"
       ],
       "text/plain": [
-       "           T02    T04    T06   T08   T10   T12   T14   T01   T03   T05   T07  \\\n",
-       "id                                                                             \n",
-       "Aaas      4341   4052   3762  3473  2894  3193  3706  2574  2760  2512  3014   \n",
-       "Aacs     11693  10913  10134  9354  7795  6784  8448  6011  4736  5480  6576   \n",
-       "Aadac        0      0      0     0     0     0     0     0     0     2     2   \n",
-       "Aadacl2      0      0      0     0     0     0     0     0     0     0     0   \n",
-       "Aadacl3      0      0      0     0     0     0     0     0     0     0     0   \n",
-       "Aadat        0      0      0     0     0     0     0     0     0     0     0   \n",
-       "Aaed1     1173   1095   1017   938   782   773  1113  1547  1848  1477  1772   \n",
-       "Aagab     2618   2443   2269  2094  1745  1791  1734  1329  1272  1245  1494   \n",
-       "Aak1      4239   3956   3674  3391  2826  2884  2345  3508  4299  4060  4872   \n",
-       "Aamdc      165    154    143   132   110   117   155   160   176   140   168   \n",
+       "        id    T02    T04    T06   T08   T10   T12   T14   T01   T03   T05  \\\n",
+       "0     Aaas   4341   4052   3762  3473  2894  3193  3706  2574  2760  2512   \n",
+       "1     Aacs  11693  10913  10134  9354  7795  6784  8448  6011  4736  5480   \n",
+       "2    Aadac      0      0      0     0     0     0     0     0     0     2   \n",
+       "3  Aadacl2      0      0      0     0     0     0     0     0     0     0   \n",
+       "4  Aadacl3      0      0      0     0     0     0     0     0     0     0   \n",
+       "5    Aadat      0      0      0     0     0     0     0     0     0     0   \n",
+       "6    Aaed1   1173   1095   1017   938   782   773  1113  1547  1848  1477   \n",
+       "7    Aagab   2618   2443   2269  2094  1745  1791  1734  1329  1272  1245   \n",
+       "8     Aak1   4239   3956   3674  3391  2826  2884  2345  3508  4299  4060   \n",
+       "9    Aamdc    165    154    143   132   110   117   155   160   176   140   \n",
        "\n",
-       "          T09   T11   T13  \n",
-       "id                         \n",
-       "Aaas     3266  3517  3768  \n",
-       "Aacs     7124  7672  8220  \n",
-       "Aadac       3     3     3  \n",
-       "Aadacl2     0     0     0  \n",
-       "Aadacl3     0     0     0  \n",
-       "Aadat       0     0     0  \n",
-       "Aaed1    1920  2068  2216  \n",
-       "Aagab    1619  1743  1868  \n",
-       "Aak1     5278  5684  6090  \n",
-       "Aamdc     182   196   210  "
+       "    T07   T09   T11   T13  \n",
+       "0  3014  3266  3517  3768  \n",
+       "1  6576  7124  7672  8220  \n",
+       "2     2     3     3     3  \n",
+       "3     0     0     0     0  \n",
+       "4     0     0     0     0  \n",
+       "5     0     0     0     0  \n",
+       "6  1772  1920  2068  2216  \n",
+       "7  1494  1619  1743  1868  \n",
+       "8  4872  5278  5684  6090  \n",
+       "9   168   182   196   210  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +369,7 @@
       "macOS-10.15.2-x86_64-i386-64bit\n",
       "4 logical CPU cores, i386\n",
       "-----\n",
-      "Session information updated at 2020-02-02 13:54\n"
+      "Session information updated at 2020-02-02 13:55\n"
      ]
     }
    ],
