--- a/Ma_Wenjing_HW1.ipynb
+++ b/Ma_Wenjing_HW1.ipynb
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wenjing Ma 2020-02-02\n"
+      "Wenjing Ma 2020-02-04\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,11 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"countdata.csv\", sep='\\t', header=0)"
+    "count_data = \"https://raw.githubusercontent.com/jessmrandall/IBS574Spring2020/master/data/countdata.csv\"\n",
+    "df = pd.read_csv(count_data, sep='\\t', header=0)"
    ]
   },
   {
@@ -77,265 +78,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>T02</th>\n",
-       "      <th>T04</th>\n",
-       "      <th>T06</th>\n",
-       "      <th>T08</th>\n",
-       "      <th>T10</th>\n",
-       "      <th>T12</th>\n",
-       "      <th>T14</th>\n",
-       "      <th>T01</th>\n",
-       "      <th>T03</th>\n",
-       "      <th>T05</th>\n",
-       "      <th>T07</th>\n",
-       "      <th>T09</th>\n",
-       "      <th>T11</th>\n",
-       "      <th>T13</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Aaas</td>\n",
-       "      <td>4341</td>\n",
-       "      <td>4052</td>\n",
-       "      <td>3762</td>\n",
-       "      <td>3473</td>\n",
-       "      <td>2894</td>\n",
-       "      <td>3193</td>\n",
-       "      <td>3706</td>\n",
-       "      <td>2574</td>\n",
-       "      <td>2760</td>\n",
-       "      <td>2512</td>\n",
-       "      <td>3014</td>\n",
-       "      <td>3266</td>\n",
-       "      <td>3517</td>\n",
-       "      <td>3768</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Aacs</td>\n",
-       "      <td>11693</td>\n",
-       "      <td>10913</td>\n",
-       "      <td>10134</td>\n",
-       "      <td>9354</td>\n",
-       "      <td>7795</td>\n",
-       "      <td>6784</td>\n",
-       "      <td>8448</td>\n",
-       "      <td>6011</td>\n",
-       "      <td>4736</td>\n",
-       "      <td>5480</td>\n",
-       "      <td>6576</td>\n",
-       "      <td>7124</td>\n",
-       "      <td>7672</td>\n",
-       "      <td>8220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Aadac</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Aadacl2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Aadacl3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Aadat</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Aaed1</td>\n",
-       "      <td>1173</td>\n",
-       "      <td>1095</td>\n",
-       "      <td>1017</td>\n",
-       "      <td>938</td>\n",
-       "      <td>782</td>\n",
-       "      <td>773</td>\n",
-       "      <td>1113</td>\n",
-       "      <td>1547</td>\n",
-       "      <td>1848</td>\n",
-       "      <td>1477</td>\n",
-       "      <td>1772</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>2068</td>\n",
-       "      <td>2216</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Aagab</td>\n",
-       "      <td>2618</td>\n",
-       "      <td>2443</td>\n",
-       "      <td>2269</td>\n",
-       "      <td>2094</td>\n",
-       "      <td>1745</td>\n",
-       "      <td>1791</td>\n",
-       "      <td>1734</td>\n",
-       "      <td>1329</td>\n",
-       "      <td>1272</td>\n",
-       "      <td>1245</td>\n",
-       "      <td>1494</td>\n",
-       "      <td>1619</td>\n",
-       "      <td>1743</td>\n",
-       "      <td>1868</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Aak1</td>\n",
-       "      <td>4239</td>\n",
-       "      <td>3956</td>\n",
-       "      <td>3674</td>\n",
-       "      <td>3391</td>\n",
-       "      <td>2826</td>\n",
-       "      <td>2884</td>\n",
-       "      <td>2345</td>\n",
-       "      <td>3508</td>\n",
-       "      <td>4299</td>\n",
-       "      <td>4060</td>\n",
-       "      <td>4872</td>\n",
-       "      <td>5278</td>\n",
-       "      <td>5684</td>\n",
-       "      <td>6090</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Aamdc</td>\n",
-       "      <td>165</td>\n",
-       "      <td>154</td>\n",
-       "      <td>143</td>\n",
-       "      <td>132</td>\n",
-       "      <td>110</td>\n",
-       "      <td>117</td>\n",
-       "      <td>155</td>\n",
-       "      <td>160</td>\n",
-       "      <td>176</td>\n",
-       "      <td>140</td>\n",
-       "      <td>168</td>\n",
-       "      <td>182</td>\n",
-       "      <td>196</td>\n",
-       "      <td>210</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        id    T02    T04    T06   T08   T10   T12   T14   T01   T03   T05  \\\n",
-       "0     Aaas   4341   4052   3762  3473  2894  3193  3706  2574  2760  2512   \n",
-       "1     Aacs  11693  10913  10134  9354  7795  6784  8448  6011  4736  5480   \n",
-       "2    Aadac      0      0      0     0     0     0     0     0     0     2   \n",
-       "3  Aadacl2      0      0      0     0     0     0     0     0     0     0   \n",
-       "4  Aadacl3      0      0      0     0     0     0     0     0     0     0   \n",
-       "5    Aadat      0      0      0     0     0     0     0     0     0     0   \n",
-       "6    Aaed1   1173   1095   1017   938   782   773  1113  1547  1848  1477   \n",
-       "7    Aagab   2618   2443   2269  2094  1745  1791  1734  1329  1272  1245   \n",
-       "8     Aak1   4239   3956   3674  3391  2826  2884  2345  3508  4299  4060   \n",
-       "9    Aamdc    165    154    143   132   110   117   155   160   176   140   \n",
-       "\n",
-       "    T07   T09   T11   T13  \n",
-       "0  3014  3266  3517  3768  \n",
-       "1  6576  7124  7672  8220  \n",
-       "2     2     3     3     3  \n",
-       "3     0     0     0     0  \n",
-       "4     0     0     0     0  \n",
-       "5     0     0     0     0  \n",
-       "6  1772  1920  2068  2216  \n",
-       "7  1494  1619  1743  1868  \n",
-       "8  4872  5278  5684  6090  \n",
-       "9   168   182   196   210  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        id    T02    T04    T06   T08   T10   T12   T14   T01   T03   T05  \\\n",
+      "0     Aaas   4341   4052   3762  3473  2894  3193  3706  2574  2760  2512   \n",
+      "1     Aacs  11693  10913  10134  9354  7795  6784  8448  6011  4736  5480   \n",
+      "2    Aadac      0      0      0     0     0     0     0     0     0     2   \n",
+      "3  Aadacl2      0      0      0     0     0     0     0     0     0     0   \n",
+      "4  Aadacl3      0      0      0     0     0     0     0     0     0     0   \n",
+      "5    Aadat      0      0      0     0     0     0     0     0     0     0   \n",
+      "\n",
+      "    T07   T09   T11   T13  \n",
+      "0  3014  3266  3517  3768  \n",
+      "1  6576  7124  7672  8220  \n",
+      "2     2     3     3     3  \n",
+      "3     0     0     0     0  \n",
+      "4     0     0     0     0  \n",
+      "5     0     0     0     0  \n",
+      "True\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
-    "df.head(n=10)"
+    "print(df.head(n=6))\n",
+    "print(df.iloc[0]['id'] == 'Aaas')\n",
+    "print(df.shape == (14944, 15))"
    ]
   },
   {
@@ -347,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +142,7 @@
       "macOS-10.15.2-x86_64-i386-64bit\n",
       "4 logical CPU cores, i386\n",
       "-----\n",
-      "Session information updated at 2020-02-02 13:55\n"
+      "Session information updated at 2020-02-04 14:08\n"
      ]
     }
    ],
