--- a/Ma_Wenjing_HW3.ipynb
+++ b/Ma_Wenjing_HW3.ipynb
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "Wenjing Ma \n",
-      "last updated: 2020-02-11 14:11:51 EST\n"
+      "last updated: 2020-02-13 14:06:12 EST\n"
      ]
     }
    ],
@@ -71,164 +71,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T02</th>\n",
-       "      <th>T04</th>\n",
-       "      <th>T06</th>\n",
-       "      <th>T08</th>\n",
-       "      <th>T10</th>\n",
-       "      <th>T12</th>\n",
-       "      <th>T14</th>\n",
-       "      <th>T01</th>\n",
-       "      <th>T03</th>\n",
-       "      <th>T05</th>\n",
-       "      <th>T07</th>\n",
-       "      <th>T09</th>\n",
-       "      <th>T11</th>\n",
-       "      <th>T13</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Aaas</th>\n",
-       "      <td>4341</td>\n",
-       "      <td>4052</td>\n",
-       "      <td>3762</td>\n",
-       "      <td>3473</td>\n",
-       "      <td>2894</td>\n",
-       "      <td>3193</td>\n",
-       "      <td>3706</td>\n",
-       "      <td>2574</td>\n",
-       "      <td>2760</td>\n",
-       "      <td>2512</td>\n",
-       "      <td>3014</td>\n",
-       "      <td>3266</td>\n",
-       "      <td>3517</td>\n",
-       "      <td>3768</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Aacs</th>\n",
-       "      <td>11693</td>\n",
-       "      <td>10913</td>\n",
-       "      <td>10134</td>\n",
-       "      <td>9354</td>\n",
-       "      <td>7795</td>\n",
-       "      <td>6784</td>\n",
-       "      <td>8448</td>\n",
-       "      <td>6011</td>\n",
-       "      <td>4736</td>\n",
-       "      <td>5480</td>\n",
-       "      <td>6576</td>\n",
-       "      <td>7124</td>\n",
-       "      <td>7672</td>\n",
-       "      <td>8220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Aadac</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Aadacl2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Aadacl3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           T02    T04    T06   T08   T10   T12   T14   T01   T03   T05   T07  \\\n",
-       "id                                                                             \n",
-       "Aaas      4341   4052   3762  3473  2894  3193  3706  2574  2760  2512  3014   \n",
-       "Aacs     11693  10913  10134  9354  7795  6784  8448  6011  4736  5480  6576   \n",
-       "Aadac        0      0      0     0     0     0     0     0     0     2     2   \n",
-       "Aadacl2      0      0      0     0     0     0     0     0     0     0     0   \n",
-       "Aadacl3      0      0      0     0     0     0     0     0     0     0     0   \n",
-       "\n",
-       "          T09   T11   T13  \n",
-       "id                         \n",
-       "Aaas     3266  3517  3768  \n",
-       "Aacs     7124  7672  8220  \n",
-       "Aadac       3     3     3  \n",
-       "Aadacl2     0     0     0  \n",
-       "Aadacl3     0     0     0  "
+       "True"
       ]
      },
      "execution_count": 3,
@@ -304,16 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1236b4bb0>"
+       "<seaborn.axisgrid.FacetGrid at 0x10ec07040>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +207,7 @@
        "array([0.39218002, 0.36808828])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +255,7 @@
       "macOS-10.15.2-x86_64-i386-64bit\n",
       "4 logical CPU cores, i386\n",
       "-----\n",
-      "Session information updated at 2020-02-11 14:25\n"
+      "Session information updated at 2020-02-13 14:06\n"
      ]
     }
    ],
@@ -443,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
